Festival | Update info

--- a/src/pages/festival/index.astro
+++ b/src/pages/festival/index.astro
@@ -1,15 +1,48 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro';
+import { Image } from '@astrojs/image/components';
 import Title from '@components/Title.astro';
 import BackToTop from '@components/BackToTop.astro';
 import ScheduleTable from '@components/festival/ScheduleTable.svelte';
 ---
 
 <BaseLayout title="Schedule">
-  <div
-    class="text-shadow flex justify-center items-center w-full py-28 text-7xl font-bold text-pink"
-  >
-    Coming Soon
+  <section class="content-container">
+    <BackToTop />
+    <div class="grid grid-cols-1 md:grid-cols-3">
+      <div class="flex justify-center w-full">
+        <div class="text-shadow py-4 font-bold text-pink-lt">
+          <h2 class="text-5xl">Georgetown</h2>
+          <p class="text-2xl mt-2 text-pink">Friday</p>
+          <p class="text-2xl">June 2nd 6-10 PM</p>
+        </div>
+      </div>
+      <div class="flex justify-center w-full">
+        <div class="text-shadow py-4 font-bold text-pink-lt">
+          <h2 class="text-5xl">Columbia City</h2>
+          <p class="text-2xl mt-2 text-pink">Saturday</p>
+          <p class="text-2xl">June 3rd 12-8 PM</p>
+        </div>
+      </div>
+      <div class="flex justify-center w-full">
+        <div class="text-shadow py-4 font-bold text-pink-lt">
+          <h2 class="text-5xl">Yesler Terrace</h2>
+          <p class="text-2xl mt-2 text-pink">Sunday</p>
+          <p class="text-2xl">June 4th 12-6 PM</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <div class="w-full flex justify-center items-center">
+    <Image
+      src="https://ik.imagekit.io/thegoldendino/hfw/2023/stranger-ad-01_jRgpQLv4f.png?updatedAt=1682113255812"
+      alt="Honk Fest West 2023, Stranger Ad"
+      width={600}
+      height={835}
+      aspectRatio="600:835"
+      format="png"
+      class="w-full max-w-2xl mt-10"
+    />
   </div>
   <!--   <div id="locations" class="content-container mb-4 sm:mb-6">
     <BackToTop />
