Festival | fix mobile styling

--- a/src/pages/festival/index.astro
+++ b/src/pages/festival/index.astro
@@ -9,22 +9,22 @@ import ScheduleTable from '@components/festival/ScheduleTable.svelte';
 <BaseLayout title="Schedule">
   <section class="content-container">
     <BackToTop />
-    <div class="grid grid-cols-1 md:grid-cols-3">
-      <div class="flex justify-center w-full">
+    <div class="grid grid-cols-1 lg:grid-cols-3">
+      <div class="flex lg:justify-center w-full">
         <div class="text-shadow py-4 font-bold text-pink-lt">
           <h2 class="text-5xl">Georgetown</h2>
           <p class="text-2xl mt-2 text-pink">Friday</p>
           <p class="text-2xl">June 2nd 6-10 PM</p>
         </div>
       </div>
-      <div class="flex justify-center w-full">
+      <div class="flex lg:justify-center w-full">
         <div class="text-shadow py-4 font-bold text-pink-lt">
           <h2 class="text-5xl">Columbia City</h2>
           <p class="text-2xl mt-2 text-pink">Saturday</p>
           <p class="text-2xl">June 3rd 12-8 PM</p>
         </div>
       </div>
-      <div class="flex justify-center w-full">
+      <div class="flex lg:justify-center w-full">
         <div class="text-shadow py-4 font-bold text-pink-lt">
           <h2 class="text-5xl">Yesler Terrace</h2>
           <p class="text-2xl mt-2 text-pink">Sunday</p>
