--- a/src/components/home/GiveBig.astro
+++ b/src/components/home/GiveBig.astro
@@ -2,19 +2,23 @@
 import { Image } from '@astrojs/image/components';
 ---
 
-<div class="md:w-1/3 flex-none md:pr-6 flex mb-3 md:mb-0 flex-col z-10">
+<a
+  class="md:w-1/3 flex-none md:pr-6 flex mb-3 md:mb-0 flex-col z-10 block hover:scale-105"
+  href="https://www.wagives.org/organization/honk-fest-west/"
+>
   <Image
-    src="https://ik.imagekit.io/thegoldendino/hfw/2022/GiveBIG-2022_mlRVu5KcO?ik-sdk-version=javascript-1.4.3&updatedAt=1650776055702"
-    alt="GiveBIG 2022"
+    src="https://ik.imagekit.io/thegoldendino/hfw/givebig_AxdkXr2m7.webp?updatedAt=1682358102945"
+    alt="GiveBIG 2023"
     width="300"
+    height="300"
     aspectRatio="1:1"
     class="h-auto w-auto mx-auto"
     format="png"
   />
-</div>
+</a>
 <div class="z-10">
   <p>
-    It’s that time of year again, GiveBIG 2022 is upon us! GiveBIG is a
+    It’s that time of year again, GiveBIG 2023 is upon us! GiveBIG is a
     statewide movement of generosity where we come together as a region to
     invest in our community. Early giving has already begun and culminates on
     May 3rd and 4th with a huge blow-out 48-hour giving event! GIVE your
@@ -34,7 +38,7 @@ import { Image } from '@astrojs/image/components';
     year.
   </p>
   <a
-    class="block font-base rounded antialiased text-main-color-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
+    class="text-shadow block font-base antialiased text-base sm:text-lg text-pink-lt font-bold flex-none mt-3 z-10 relative hover:scale-105 hover:left-4"
     href="https://www.wagives.org/organization/honk-fest-west/"
   >
     » GiveBIG & Thank You!
