--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -39,7 +39,7 @@ const activeListItem = (link: string) => {
 
 <nav class="w-full pb-8">
   <div class="w-full block sm:hidden">
-    <MobileMenu {nav} {social} {currentMenuItem} client:load />
+    <MobileMenu {nav} {social} {currentMenuItem} client:visible />
   </div>
   <div class="w-full hidden sm:block">
     <ul class="flex flex-wrap justify-center items-center w-full">
