--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,11 +3,16 @@ import Head from '@components/base-head/BaseHead.astro';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
 import BackgroundImage from '@components/BackgroundImage.astro';
-import nav from './_nav.toml'
-import footer from './_footer.toml'
-import social from './_social.toml'
+import nav from './_nav.toml';
+import footer from './_footer.toml';
+import social from './_social.toml';
 
-const { title } = Astro.props;
+const { title, clearPage } = Astro.props;
+const headerClass = clearPage ? 'hidden sm:block' : '';
+const footerClass = clearPage ? 'hidden sm:block' : '';
+const mainClass = clearPage
+  ? 'p-0 m-0 overflow-hidden min-h-screen sm:min-h-auto'
+  : 'pb-6 px-3';
 ---
 
 <!DOCTYPE html>
@@ -26,24 +31,25 @@ const { title } = Astro.props;
     <div class="w-full h-full fixed top-0 left-0">
       <div class="bg-aqua w-full h-full fixed top-0 left-0"></div>
       <BackgroundImage />
-      <!-- <div class="bg-site  w-full h-full fixed top-0 left-0"></div> -->
     </div>
 
     <div
       class="w-full h-full absolute top-0 left-0 flex flex-col justify-between"
     >
       <!-- HEADER -->
-      <header class="w-full mx-auto">
+      <header class=`w-full mx-auto ${headerClass}`>
         <Header nav={nav} social={social} />
       </header>
 
       <!-- MAIN -->
-      <main class="max-w-screen-xl pb-6 sm:pb-10 px-3 sm:px-6 w-full mx-auto">
+      <main
+        class=`max-w-screen-xl mx-auto sm:pb-10 sm:px-6 w-full ${mainClass}`
+      >
         <slot />
       </main>
 
       <!-- FOOTER -->
-      <footer class="mt-auto w-full">
+      <footer class=`mt-auto w-full ${footerClass}`>
         <Footer supporters={footer.supporters} social={social} />
       </footer>
     </div>
