--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,7 +16,7 @@ const mainClass = clearPage
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
   <!-- HEAD -->
   <head>
     <Head title={title}>
@@ -30,7 +30,7 @@ const mainClass = clearPage
     }
   </head>
 
-  <body class={`min-h-full `}>
+  <body class={`h-full min-h-full`}>
     <div id="back-to-top"></div>
 
     <!-- BACKGROUND IMAGE -->
