--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,30 +7,19 @@ import nav from './_nav.toml';
 import footer from './_footer.toml';
 import social from './_social.toml';
 
-const { title, clearPage } = Astro.props;
-const headerClass = clearPage ? 'hidden sm:block' : '';
-const footerClass = clearPage ? 'hidden sm:block' : '';
-const mainClass = clearPage
-  ? 'p-0 m-0 overflow-hidden min-h-screen sm:min-h-auto'
-  : 'pb-6 px-3';
+const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="en" class="h-full">
+<html lang="en">
   <!-- HEAD -->
   <head>
     <Head title={title}>
       <slot name="head" />
     </Head>
-
-    {
-      clearPage && (
-        <meta name="viewport" content="minimal-ui, width=device-width" />
-      )
-    }
   </head>
 
-  <body class={`h-full min-h-full`}>
+  <body class="min-h-full">
     <div id="back-to-top"></div>
 
     <!-- BACKGROUND IMAGE -->
@@ -43,19 +32,17 @@ const mainClass = clearPage
       class="w-full h-full absolute top-0 left-0 flex flex-col justify-between"
     >
       <!-- HEADER -->
-      <header class=`w-full mx-auto ${headerClass}`>
+      <header class="w-full mx-auto">
         <Header nav={nav} social={social} />
       </header>
 
       <!-- MAIN -->
-      <main
-        class=`max-w-screen-xl mx-auto sm:pb-10 sm:px-6 w-full ${mainClass}`
-      >
+      <main class="max-w-screen-xl mx-auto sm:pb-10 sm:px-6 w-full">
         <slot />
       </main>
 
       <!-- FOOTER -->
-      <footer class=`mt-auto w-full ${footerClass}`>
+      <footer class="mt-auto w-full">
         <Footer supporters={footer.supporters} social={social} />
       </footer>
     </div>
