--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,9 +3,9 @@ import Head from '@components/base-head/BaseHead.astro';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
 import BackgroundImage from '@components/BackgroundImage.astro';
-import nav from './_nav.toml';
-import footer from './_footer.toml';
-import social from './_social.toml';
+import nav from '@data/nav.toml';
+import footer from '@data/footer.toml';
+import social from '@data/social.toml';
 
 const { title } = Astro.props;
 ---
