--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -9,14 +9,13 @@ import CommitteeRoles from '@components/about/CommitteeRoles.astro';
 import HonkFamily from '@components/about/HonkFamily.astro';
 import ContactUs from '@components/about/ContactUs.astro';
 import MarkdownContent from '@components/MarkdownContent.astro';
-import committee from './_committee.toml';
-import family from './_family.toml';
-import contact from './_contact.toml';
-import { rawContent as diversity_content } from './_diversity.md';
-import { rawContent as join_us_content } from './_join_us.md';
-import { rawContent as mission_content } from './_mission.md';
-import { rawContent as story_content } from './_story.md';
-
+import committee from '@data/committee.toml';
+import family from '@data/family.toml';
+import contact from '@data/contact.toml';
+import { rawContent as diversity_content } from '@data/diversity.md';
+import { rawContent as join_us_content } from '@data/join_us.md';
+import { rawContent as mission_content } from '@data/mission.md';
+import { rawContent as story_content } from '@data/story.md';
 ---
 
 <BaseLayout title="About">
@@ -46,7 +45,7 @@ import { rawContent as story_content } from './_story.md';
     <section id="contact" class="content-container md:col-span-2">
       <BackToTop />
       <Title title="Contact Us" />
-      <ContactUs emails={contact.emails}/>
+      <ContactUs emails={contact.emails} />
     </section>
   </div>
 
@@ -96,7 +95,7 @@ import { rawContent as story_content } from './_story.md';
     </section>
 
     <!-- HONK! FAMILY -->
-    <HonkFamily family={family}/>
+    <HonkFamily family={family} />
   </div>
 </BaseLayout>
 
