--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -3,7 +3,7 @@ import BaseLayout from '@layouts/BaseLayout.astro';
 import Title from '@components/Title.astro';
 import BackToTop from '@components/BackToTop.astro';
 import MarkdownContent from '@components/MarkdownContent.astro';
-import { rawContent as info } from './_info.md';
+import { rawContent as info } from '@data/donate_info.md';
 ---
 
 <BaseLayout title="Donate">
