--- a/src/pages/volunteer/index.astro
+++ b/src/pages/volunteer/index.astro
@@ -5,7 +5,7 @@ import BackToTop from '@components/BackToTop.astro';
 import OpenPositions from '@components/volunteer/OpenPositions.astro';
 import FestivalVolunteer from '@components/FestivalVolunteer.astro';
 
-import positions from './_positions.toml';
+import positions from '@data/positions.toml';
 ---
 
 <BaseLayout title="Volunteer">
@@ -36,7 +36,7 @@ import positions from './_positions.toml';
         </p>
       </div>
 
-      <OpenPositions positions={positions}/>
+      <OpenPositions positions={positions} />
     </div>
   </div>
 </BaseLayout>
