--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from '@astrojs/image/components';
-import SocialLinks from '@components/SocialLinks.astro';
+import SocialLink from '@components/SocialLink.svelte';
 import MobileMenu from '@components/MobileMenu.svelte';
 
 const { nav, social } = Astro.props;
@@ -69,14 +69,14 @@ const activeListItem = (link: string) => {
           Object.keys(social.links).map((key) => (
             <div>
               <div class="hidden sm:block px-1 h-9 hover:transition ease-in hover:scale-105 hover:text-pink">
-                <SocialLinks
+                <SocialLink
                   key={key}
                   link={social.links[key]}
                   size="1.875rem"
                 />
               </div>
               <div class="block sm:hidden px-1 h-7">
-                <SocialLinks key={key} link={social.links[key]} size="1.5rem" />
+                <SocialLink key={key} link={social.links[key]} size="1.5rem" />
               </div>
             </div>
           ))
