--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Slideshow from '../components/slideshow/Slideshow.svelte';
 import BackToTop from '@components/BackToTop.astro';
 import FestivalInfoBlock from '@components/home/FestivalInfoBlock.astro';
 
-import slideshow from './_slideshow.toml';
+import slideshow from '@data/slideshow.toml';
 import GiveBig from '@components/home/GiveBig.astro';
 ---
 
@@ -38,12 +38,12 @@ import GiveBig from '@components/home/GiveBig.astro';
     >
       <BackToTop />
     </article> -->
-    <article
+    <!-- <article
       class="w-full content-container col-span-6 flex flex-col md:flex-row"
     >
       <BackToTop />
       <GiveBig />
-    </article>
+    </article> -->
 
     <!-- LINK BLURBS -->
     <section class="col-span-6 md:col-span-2 content-container">
