--- a/src/pages/media/index.astro
+++ b/src/pages/media/index.astro
@@ -5,8 +5,8 @@ import BackToTop from '@components/BackToTop.astro';
 import PhotosVideo from '@components/media/PhotosVideo.astro';
 import Articles from '@components/media/Articles.astro';
 import MarkdownContent from '@components/MarkdownContent.astro';
-import { rawContent as articles } from './_articles.md';
-import media from './_media.toml';
+import { rawContent as articles } from '@data/articles.md';
+import media from '@data/media.toml';
 ---
 
 <BaseLayout title="Media">
