--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -37,7 +37,7 @@ const { title } = Astro.props;
       </header>
 
       <!-- MAIN -->
-      <main class="max-w-screen-xl mx-auto sm:pb-10 sm:px-6 w-full">
+      <main class="max-w-screen-xl mx-auto pb-10 px-6 w-full">
         <slot />
       </main>
 
