--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -40,10 +40,7 @@ import { rawContent as info } from '@data/donate_info.md';
           width="300"
           height="500"
           src="https://www.wagives.org/forms/honk-fest-west?id=ajcqcf&embed=donation_widget"
-          scrolling="no"
-          marginHeight="0"
-          marginWidth="0"
-          frameBorder="0"></iframe>
+        ></iframe>
       </div>
     </div>
     <div class="w-full md:w-2/3">
