--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import FestivalInfoBlock from '@components/home/FestivalInfoBlock.astro';
 
 import slideshow from '@data/slideshow.toml';
 import GiveBig from '@components/home/GiveBig.astro';
+import ThursdayFundraiser from '@components/home/ThursdayFundraiser.astro';
 ---
 
 <BaseLayout title="Home">
@@ -38,12 +39,12 @@ import GiveBig from '@components/home/GiveBig.astro';
     >
       <BackToTop />
     </article> -->
-    <!-- <article
+    <article
       class="w-full content-container col-span-6 flex flex-col md:flex-row"
     >
       <BackToTop />
-      <GiveBig />
-    </article> -->
+      <ThursdayFundraiser />
+    </article>
 
     <!-- LINK BLURBS -->
     <section class="col-span-6 md:col-span-2 content-container">
