--- a/src/components/home/FestivalInfoBlock.astro
+++ b/src/components/home/FestivalInfoBlock.astro
@@ -4,30 +4,32 @@ import Title from '@components/Title.astro';
 
 <!-- INFO BLOCK -->
 <section class="w-full col-span-6 lg:col-span-2 content-container z-10">
-  <Title title="Upcoming Festival" center={true} />
-  <div
-    class="text-shadow flex flex-col items-center h-full text-2xl sm:text-4xl font-medium tracking-wide z-10"
-  >
-    <span class="text-pink text-center mb-2 hidden font-emphasis">
-      <span class="text-gray-200">HONK!</span> FEST WEST
-    </span>
-    <div class="flex flex-col lg:flex-row justify-center items-center w-full">
-      <span
-        class="block lg:mb-0 text-gray-200 tracking-normal md:mr-2 font-emphasis text-center"
-      >
-        <time>JUNE 2 - 4, 2023</time>
+  <a href="/festival" class="block">
+    <Title title="Upcoming Festival" center={true} />
+    <div
+      class="text-shadow flex flex-col items-center h-full text-2xl sm:text-4xl font-medium tracking-wide z-10"
+    >
+      <span class="text-pink text-center mb-2 hidden font-emphasis">
+        <span class="text-gray-200">HONK!</span> FEST WEST
       </span>
+      <div class="flex flex-col lg:flex-row justify-center items-center w-full">
+        <span
+          class="block lg:mb-0 text-gray-200 tracking-normal md:mr-2 font-emphasis text-center"
+        >
+          <time>JUNE 2 - 4, 2023</time>
+        </span>
+      </div>
+      <span class="text-gray-300 text-center block font-emphasis">
+        SEATTLE, WA
+      </span>
+      <div class="content">
+        <a
+          class="block antialiased text-base sm:text-lg flex-none z-10 mt-5 hover:scale-105"
+          href="/festival"
+        >
+          » More Info
+        </a>
+      </div>
     </div>
-    <span class="text-gray-300 text-center block font-emphasis">
-      SEATTLE, WA
-    </span>
-    <div class="content">
-      <a
-        class="block antialiased text-base sm:text-lg flex-none z-10 mt-5 hover:scale-105"
-        href="/festival"
-      >
-        » More Info
-      </a>
-    </div>
-  </div>
+  </a>
 </section>
