--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,12 +39,12 @@ import ThursdayFundraiser from '@components/home/ThursdayFundraiser.astro';
     >
       <BackToTop />
     </article> -->
-    <article
+    <!-- <article
       class="w-full content-container col-span-6 flex flex-col md:flex-row"
     >
       <BackToTop />
       <ThursdayFundraiser />
-    </article>
+    </article> -->
 
     <!-- LINK BLURBS -->
     <section class="col-span-6 md:col-span-2 content-container">
