Remove current festival

--- a/src/components/home/FestivalInfoBlock.astro
+++ b/src/components/home/FestivalInfoBlock.astro
@@ -6,9 +6,9 @@ import type { now } from 'svelte/internal';
 <!-- INFO BLOCK -->
 <section class="w-full col-span-6 lg:col-span-2 content-container z-10">
   <a href="/festival" class="block">
-    <Title title="See Today's Festival" center={true} />
+    <Title title="Upcoming Festival" center={true} />
     <div
-      class="text-shadow flex flex-col items-center h-full text-2xl sm:text-4xl font-medium tracking-wide z-10"
+      class="text-shadow flex flex-col items-center h-full text-xl sm:text-3xl font-medium tracking-wide z-10"
     >
       <span class="text-pink text-center mb-2 hidden font-emphasis">
         <span class="text-gray-200">HONK!</span> FEST WEST
@@ -17,7 +17,7 @@ import type { now } from 'svelte/internal';
         <span
           class="block lg:mb-0 text-gray-200 tracking-normal md:mr-2 font-emphasis text-center"
         >
-          <time>JUNE 2 - 4, 2023</time>
+          <time>May 31 - June 2, 2024</time>
         </span>
       </div>
       <span class="text-gray-300 text-center block font-emphasis">
@@ -28,7 +28,7 @@ import type { now } from 'svelte/internal';
           class="block antialiased text-base sm:text-lg flex-none z-10 mt-5 hover:scale-105"
           href="/festival"
         >
-          » More Info
+          <!-- » More Info -->
         </a>
       </div>
     </div>
