Media | Add Dylan Lockard 2023 photos

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ interface Props {
   social: Social;
 }
 
-const { supporters, social } = Astro.props;
+const { supporters, social }: Props = Astro.props;
 ---
 
 <div class="bg-cobalt">
