--- a/src/pages/portal/index.astro
+++ b/src/pages/portal/index.astro
@@ -45,7 +45,7 @@ import '@styles/global.css';
             <div class="rounded-lg bg-white overflow-hidden shadow">
               <div class="p-6 lg:px-0 lg:pb-0 hidden lg:block">
                 <iframe
-                  src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FLos_Angeles&src=Y19zamtrdTJqNnBkdTU5c2g4NGJldXNoajdzc0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%239E69AF"
+                  src="https://calendar.google.com/calendar/embed?src=c_sjkku2j6pdu59sh84beushj7ss%40group.calendar.google.com&ctz=America%2FLos_Angeles"
                   style="border:solid 1px #777"
                   width="800"
                   height="600"
